--- a/ample/Cargo.toml
+++ b/ample/Cargo.toml
@@ -5,9 +5,16 @@ edition = "2024"
 
 [dependencies]
 discord-rich-presence = "0.2.5"
+dotenvy = "0.15.7"
+keyring = {version = "3.6.3", features = ["windows-native", "linux-native"]}
 log = "0.4.27"
+md5 = "0.8.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
 simplelog = "0.12.2"
 sys_media = { path = "../sys-media" }
+thiserror = "2.0.12"
+ureq = { version = "3.0.12", features = ["json"] }
 windows-service = {version = "0.8.0", optional = true}
 
 [features]
