--- a/ample/Cargo.toml
+++ b/ample/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+directories = "6.0.0"
 discord-rich-presence = "0.2.5"
 dotenvy = "0.15.7"
-keyring = {version = "3.6.3", features = ["windows-native", "linux-native"]}
+keyring = { version = "3.6.3", features = ["windows-native", "linux-native"] }
 log = "0.4.27"
 md5 = "0.8.0"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -15,7 +16,8 @@ simplelog = "0.12.2"
 sys_media = { path = "../sys-media" }
 thiserror = "2.0.12"
 ureq = { version = "3.0.12", features = ["json"] }
-windows-service = {version = "0.8.0", optional = true}
+eventlog = { version = "0.3.0", optional = true }
+windows-service = { version = "0.8.0", optional = true }
 
 [features]
-win_service = ["windows-service"]
+win_service = ["windows-service", "eventlog"]
