--- a/ample/Cargo.toml
+++ b/ample/Cargo.toml
@@ -21,3 +21,4 @@ windows-service = { version = "0.8.0", optional = true }
 
 [features]
 win_service = ["windows-service", "eventlog"]
+headless = []
