--- a/ample/Cargo.toml
+++ b/ample/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "2.0.12"
 ureq = { version = "3.0.12", features = ["json"] }
 eventlog = { version = "0.3.0", optional = true }
 windows-service = { version = "0.8.0", optional = true }
+crossbeam = "0.8.4"
 
 [features]
 # win_service = ["windows-service", "eventlog"]
