--- a/ample/Cargo.toml
+++ b/ample/Cargo.toml
@@ -21,6 +21,7 @@ eventlog = { version = "0.3.0", optional = true }
 windows-service = { version = "0.8.0", optional = true }
 crossbeam = "0.8.4"
 tray-item = "0.10.0"
+regex = "1.11.3"
 
 [build-dependencies]
 embed-resource = "3.0.6"
