--- a/ample/Cargo.toml
+++ b/ample/Cargo.toml
@@ -22,6 +22,7 @@ windows-service = { version = "0.8.0", optional = true }
 crossbeam = "0.8.4"
 tray-item = "0.10.0"
 regex = "1.11.3"
+dhat = "0.3.3"
 
 [build-dependencies]
 embed-resource = "3.0.6"
@@ -29,3 +30,4 @@ embed-resource = "3.0.6"
 [features]
 # win_service = ["windows-service", "eventlog"]
 headless = []
+dhat-heap = []
